tests/ui/attr_bad_align.stderr
error: fixcol-derive error: Expected values for align are "left", "right", or "full".
 --> tests/ui/attr_bad_align.rs:5:33
  |
5 |     #[fixcol(width = 5, align = "backwards")]
  |                                 ^^^^^^^^^^^
